force-app/main/default/objects/TipoAtrasos__c/TipoAtrasos__c.object-meta.xml
<CustomObject>
    <label>TipoAtraso</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Nome de Atrasos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TipoAtrasos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>