force-app/main/default/objects/TipoAtrasos__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <formula>MotivoAtraso__r.Ativo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>