force-app/main/default/objects/TipoAtrasos__c/fields/Atrasos_Omni__c.field-meta.xml
<CustomField>
    <fullName>Atrasos_Omni__c</fullName>
    <label>Atrasos Omni</label>
    <referenceTo>Atrasos_Omni__c</referenceTo>
    <relationshipLabel>Motivo Atraso</relationshipLabel>
    <relationshipName>TipoAtrasos</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>