force-app/main/default/objects/TipoAtrasos__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <formula>text(MotivoAtraso__r.Categoria__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria</label>
    <type>Text</type>
</CustomField>