force-app/main/default/objects/TipoAtrasos__c/fields/ChaveUnica__c.field-meta.xml
<CustomField>
    <fullName>ChaveUnica__c</fullName>
    <label>ChaveUnica</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>