force-app/main/default/objects/TipoAtrasos__c/fields/MotivoAtraso__c.field-meta.xml
<CustomField>
    <fullName>MotivoAtraso__c</fullName>
    <label>Motivo do Atraso</label>
    <referenceTo>MotivoAtraso__c</referenceTo>
    <relationshipLabel>Atrasos Omni</relationshipLabel>
    <relationshipName>TipoAtrasos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>